--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <div class="centered">Welcome to MyPortal!</div>
     </div>
 
-    <h2>Easily connect teams, and keep data safe and secure</h2>
+    <h2>Easily collaborate with others and move files across devices with ease</h2>
 
     <div class="container">
         <a href="login/login.php"><img src="passkey.png" alt="passkey" /></a><h3 style="color:black;">Login to MyPortal</h3>
         <br />
         <a href="login/welcome.php"><img src="computer.png" alt="computer" /></a><h3 style="color:black;">Already logged in? Go to MyPortal Home</h3>
+        <br />
+        <a href="about/index.html"><img src="about.png" alt="about" /><h3 style="color:black;"></h3></a>
     </div>
 
 </body>
