--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br />
         <a href="login/welcome.php"><img src="computer.png" alt="computer" /></a><h3 style="color:black;">Already logged in? Go to MyPortal Home</h3>
         <br />
-        <a href="about/index.html"><img src="about.png" alt="about" /><h3 style="color:black;">About MyPortal</h3></a>
+        <a href="about/index.html"><img src="about.png" alt="about" /></a><h3 style="color:black;">About MyPortal</h3>
     </div>
 
 </body>
