--- a/maintenance.html
+++ b/maintenance.html
@@ -25,8 +25,8 @@
     }
 
     .sk-cube-grid {
-  width: 40px;
-  height: 40px;
+  width: 96px;
+  height: 96px;
   margin: 100px auto;
 }
 
@@ -105,6 +105,6 @@
     <h2>Sorry for the inconvenience, but this website is currently under maintenance.</h2>
     <h2>We are currently squashing bugs and closing black holes, so please wait patiently. We should be done soon.</h2>
     <br />
-    <h3 style="text-align: center;">Don't worry; none of your files will be removed or changed.</h3>
+    <h3 style="text-align: center; color:white;">Don't worry; none of your files will be removed or changed.</h3>
 </body>
 </html>
