--- a/maintenance.html
+++ b/maintenance.html
@@ -24,6 +24,12 @@
     text-align:center;
     }
 
+    h3 {
+    font-family:Arial, Helvetica, sans-serif;
+    text-align: center;
+     color: white;
+}
+
     .sk-cube-grid {
   width: 96px;
   height: 96px;
@@ -105,6 +111,6 @@
     <h2>Sorry for the inconvenience, but this website is currently under maintenance.</h2>
     <h2>We are currently squashing bugs and closing black holes, so please wait patiently. We should be done soon.</h2>
     <br />
-    <h3 style="text-align: center; color:white;">Don't worry; none of your files will be removed or changed.</h3>
+    <h3>Don't worry; none of your files will be removed or changed.</h3>
 </body>
 </html>
