Fixed broken code
Some code was broken in the index page, which is fixed in this update

Also updated README.md with better auto-update code, to prevent servers from becoming unresponsive

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 <body>
     <div class="container">
-        <img src="code01.jpg" alt="code01" style="width:100%; height:180px; opacity: 0.4;" />
+        <img src="/icons/code01.jpg" alt="code01" style="width:100%; height:180px; opacity: 0.4;" />
         <div class="centered">Welcome to MyPortal!</div>
     </div>
 
     <h2>Easily collaborate with others and move files across devices with ease</h2>
 
     <div class="container">
-        <a href="login/login.php"><img src="passkey.png" alt="passkey" /></a><h3 style="color:black;">Login to MyPortal</h3>
+        <a href="login/login.php"><img src="/icons/passkey.png" alt="passkey" /></a><h3 style="color:black;">Login to MyPortal</h3>
         <br />
-        <a href="login/welcome.php"><img src="computer.png" alt="computer" /></a><h3 style="color:black;">Already logged in? Go to MyPortal Home</h3>
+        <a href="login/welcome.php"><img src="/icons/computer.png" alt="computer" /></a><h3 style="color:black;">Already logged in? Go to MyPortal Home</h3>
         <br />
-        <a href="about/index.html"><img src="about.png" alt="about" /></a><h3 style="color:black;">About MyPortal</h3>
+        <a href="about/index.html"><img src="/icons/about.png" alt="about" /></a><h3 style="color:black;">About MyPortal</h3>
     </div>
 
 </body>
