Fixed broken warning message
Fixed the broken warning message found on the index page when using the Testing branch. It should now display correctly.

Also improved aliases within a CSS file and multiple pages when dealing with lists and the Navigation Bar.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
 }
+
     </style>
 </head>
 <body>
@@ -93,13 +94,13 @@
     <div class="form-popup" id="moreinfo">
         <p>The testing branch isn't intended for use, with a few exceptions:</p>
         <ul>
-            <li>You are an administrator, and are editing features that are experimental, and shouldn't be in the mainstream release yet</li>
+            <li>You are an administrator, and are editing features that are experimental, and shouldn't be in the mainstream release for your team yet</li>
             <li>You want to see potential new features before they come to the mainstream</li>
         </ul>
         <p>It is possible that some features in the testing branch will be removed in the future, and never be worked on again.</p>
         <p>It is also possible that in the near future that the features will come to the main branch.</p>
         <br />
-        <p>It isn't recommended to add this branch to an auto-update script. It may break features that you are working on yourself, if you are using this test branch.</p>
+        <p>It isn't recommended to add this branch to an auto-update script. It may break features that you are working on yourself, if you are using this test branch. It could even break your normal configuration, if you don't set it up right.</p>
         <br />
         <button type="button" class="btn cancel" onclick="closeForm()">Close Information Box</button>
     </form>
