Multiple bug fixes
Fixed multiple bugs on the index page

Also increased version number to 1.1.8

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
         }
     </script>
     <style>
-    * {box-sizing: border-box;}
-
-/* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   background-color: #555;
   color: white;
@@ -21,7 +18,6 @@
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: fixed;
   width: 280px;
 }
 
@@ -31,45 +27,6 @@
   position: fixed;
   border: 3px solid #f1f1f1;
   z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-}
-
-/* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
 }
 
 /* Add some hover effects to buttons */
@@ -91,19 +48,21 @@
 
     <button class="open-button" onclick="openForm()" id="infobutton">More information</button>
 
-    <div class="form-popup" id="moreinfo">
-        <p>The testing branch isn't intended for use, with a few exceptions:</p>
-        <ul>
-            <li>You are an administrator, and are editing features that are experimental, and shouldn't be in the mainstream release for your team yet</li>
-            <li>You want to see potential new features before they come to the mainstream</li>
-        </ul>
-        <p>It is possible that some features in the testing branch will be removed in the future, and never be worked on again.</p>
-        <p>It is also possible that in the near future that the features will come to the main branch.</p>
-        <br />
-        <p>It isn't recommended to add this branch to an auto-update script. It may break features that you are working on yourself, if you are using this test branch. It could even break your normal configuration, if you don't set it up right.</p>
-        <br />
-        <button type="button" class="btn cancel" onclick="closeForm()">Close Information Box</button>
-    </form>
+    <div class="centered">
+    <h2>WARNING! You are on the test branch for MyPortal! See the button below for more information.</h2>
+
+      <div class="form-popup" id="moreinfo">
+          <h2>If you accidentally got here, you may want to leave. The pages here are unstable and highly subject to change. It is even possible for your administrator to be editing this right now.</h2>
+          <br />
+          <p>The testing branch isn't intended for use, however you <i>can</i> use it. It is recommended for administrators to work on experimental features here.</p>
+          <br />
+          <p>It is possible that some features in the testing branch will be removed in the future, and never be worked on again.</p>
+          <p>It is also possible that in the near future that the features will come to the main branch.</p>
+          <br />
+          <p>It isn't recommended to add this branch to an auto-update script. It may break features that you are working on yourself, if you are using this test branch. It could even break your normal configuration, if you don't set it up right.</p>
+          <br />
+          <button type="button" onclick="closeForm()">Close Information Box</button>
+      </div>
     </div>
 
     <script>
