--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <button class="open-button" onclick="openForm()" id="infobutton">More information</button>
 
-    <div class="centered">
+    <div class="container">
     <h2>WARNING! You are on the test branch for MyPortal! See the button below for more information.</h2>
 
       <div class="form-popup" id="moreinfo">
