--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     <!--More Information Popup-->
 
     <div class="container">
-    <h2>WARNING! You are on the test branch for MyPortal! See the button below for more information.</h2>
+    <h2 style="color: black;">WARNING! You are on the test branch for MyPortal! See the button below for more information.</h2>
 
       <br />
 
     <button class="open-button" onclick="openForm()" id="infobutton">More information</button>
 
       <div class="form-popup" id="moreinfo">
-          <h2>If you accidentally got here, you may want to leave. The pages here are unstable and highly subject to change. It is even possible for your administrator to be editing this right now.</h2>
+          <h2 style="color: black;">If you accidentally got here, you may want to leave. The pages here are unstable and highly subject to change. It is even possible for your administrator to be editing this right now.</h2>
           <br />
           <p>The testing branch isn't intended for use, however you <i>can</i> use it. It is recommended for administrators to work on experimental features here.</p>
           <br />
