Changed styling on account settings page to center
Centered the content on the account settings page.

--- a/accountsettingsmenu.html
+++ b/accountsettingsmenu.html
@@ -34,7 +34,7 @@
                                 </div>
                                 <p>You will be redirected to the account deletion page by clicking the "Delete Account" button above.</p>
                                 <br />
-                                <p>WARNING! You cannot undo this action once it has completed. Your files in the File Manager web app will remain. If you need to delete them, please enter the File Manager web app and delete the files before deleting your account.</p>
+                                <h3>WARNING! You cannot undo this action once it has completed. Your files in the File Manager web app will remain. If you need to delete them, please enter the File Manager web app and delete the files before deleting your account.</h3>
                             </tabpanel>
                         </tabpanels>
                     </tabbox>
