File cleanup and fixes to about page
Removed some old files and fixed issues with the about page.

--- a/about/index.html
+++ b/about/index.html
@@ -4,20 +4,33 @@
   <meta charset="UTF-8">
   <title>About MyPortal</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
 <body>
     <h1>About MyPortal</h1>
 
     <h3>The goal of MyPortal is to make team collaboration easier and to move data easily across different devices.</h3>
-    <h3>MyPortal is developed by a developer behind <a href="am.html">Anonymous Websites</a>. <a href="https://github.com/AnonymousHacker1279">(GitHub: AnonymousHacker1279)</a></h3>
+    <h3>MyPortal is developed by a developer behind <a href="https://anonymoushacker1279.github.io/AnonymousWebsites" style="text-decoration: underline;">Anonymous Websites</a>.</h3>
+    
+    <br />
+    <br />
+    <div class="content">
+        <a href="https://github.com/AnonymousHacker1279">
+        <img src="https://anonymoushacker1279.github.io/AnonymousWebsites/icon/dev_icons/AnonymousHacker1279.png" width="100px" height="100px" />
+        <h2>AnonymousHacker1279</h2>
+        <br />
+        <p>You can see my GitHub page <a href="https://github.com/AnonymousHacker1279" style="text-decoration: underline;">here</a>.</p>
+        <br />
+        <p></p>
+    </div>
 
     <!--Animated Background (Constellation)-->
 
     <canvas style="position:relative; z-index:-999"></canvas>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
