Improved rendering for different screen sizes
Added viewport meta information to pages so they render better on different screen sizes.

--- a/accountsettingsmenu.html
+++ b/accountsettingsmenu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <!--The tab section within this page is based on the Chromium Tab design-->
             <link rel="stylesheet" href="css/tabs.css">
             <script src="js/promise_resolver.js"></script>
