--- a/maintenance.html
+++ b/maintenance.html
@@ -3,6 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Under Maintenance</title>
     <style>
     body
@@ -109,7 +110,7 @@
       </div>
     <br />
     <h2>Sorry for the inconvenience, but this website is currently under maintenance.</h2>
-    <h2>We are currently squashing bugs and closing black holes, so please wait patiently. We should be done soon.</h2>
+    <h2>We are working hard to squash bugs and close black holes, so please be patient. We should be done soon.</h2>
     <br />
     <h3>Don't worry; none of your files will be removed or changed.</h3>
 </body>
